# RISC-V-Simulator

./: .gitignore  CMakeLists.txt  README.md  run-std.zsh  run.ps1  run.zsh  run2.ps1
docs/: help.md
include/: bit.h  cpu.h  register.h  tools.h  wire.h
src/: alu.cpp  alu.h  branch_predictor.h  common.h  constants.h  decoder.h  fetcher.h  interpreter.cpp  main.cpp  memory.h  regfile.h  reorder_buffer.h  rs_alu.h  rs_bcu.h  rs_mem.h  simulator.h  stats.h  test.cpp
